@@ -1,4 +1,9 @@
 
+2018-06-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y, reserved.c: added POS (only reserved for acu and default)
+	  as alternative for AT POSITION, allow both in SCREEN definitions
+
 2018-06-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* Makefile.am: remove path output when creating manpage
